# pytorch-poisson-image-editing

./: .gitignore  CITATION.cff  LICENSE  README.md  examples.ipynb  pyproject.toml  setup.py
pie-torch/: functional.py
pietorch/: __init__.py  cached_poisson_blender.py  functional.py  functional_numpy.py  utils.py
test/: test_cached_poisson_blender.py  test_gradient.py
